# atlas

./: .gitignore  .prettierignore  Auth.md  DOCS.md  Dockerfile  Link_Header.md  README.md  TODO.md  alembic.ini  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  renovate.json
app/: main.py
app/alembic/: env.py
app/alembic/versions/: b187abc3ab98_initial_tables.py  b4290c8d79b9_initial_tables.py
app/api/: deps.py  main.py
app/api/routes/: attachments.py  collections.py  items.py  items_tags.py  rooms.py  stacks.py  tags.py  users.py
app/auth/: oidc.py
app/core/: config.py  deps.py  telemetry.py
app/frontend/: deps.py  main.py
app/frontend/static/: tailwind.css
app/frontend/templates/: base.jinja  close-dialog-button.jinja  confirmation-dialog.jinja  error.jinja  index.jinja  theme.html
app/frontend/templates/items/: index.jinja
app/models/: __init__.py  attachment.py  session.py  user.py
app/tests/utils/: item.py  room.py
backend/: .dockerignore  Dockerfile  Link_Header.md  README.md  alembic.ini  cli.py  pyproject.toml
backend/app/: __init__.py  main.py  utils.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 27fb1edf4b8e_item_tag_unique.py  54642a2053b9_initial_tables.py  78f806edc6f5_initial_tables.py  ac7dc3ef0a29_initial_tables.py  ff7a7325c3af_initial_tables.py
backend/app/api/: async_deps.py  deps.py  main.py
backend/app/api/routes/: attachments.py  collections.py  items.py  items_tags.py  rooms.py  stacks.py  tags.py  users.py
backend/app/auth/: oidc.py
backend/app/core/: async_db.py  config.py  db.py  exceptions.py  logging.py  s3.py  telemetry.py
backend/app/middleware/: structlog.py
backend/app/models/: __init__.py  attachment.py  collection.py  item.py  room.py  stack.py  tag.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_items.py
backend/app/tests/utils/: stack.py
backend/cli/: db.py  main.py  serve.py  toml.py  typer.py
backend/cli/config/: __init__.py  example.py  schema.py  show.py  utils.py
backend/scripts/: format.sh  lint.sh  mypy-gha.py  test.sh
cli/: __main__.py  db.py  serve.py
cli/config/: example.py
scripts/: format.sh  tailwindcss.sh  test.sh
server/: Dockerfile  README.md  TODO.md  docker-compose.yaml
server/app/alembic/: script.py.mako
server/app/api/: deps.py
server/app/api/routes/: attachments.py  tags.py  users.py
server/app/core/: config.py  exceptions.py  telemetry.py
server/app/models/: tag.py  user.py
server/app/tests/utils/: collection.py
server/cli/: serve.py
server/cli/config/: show.py
server/scripts/: lint.sh
